--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
     <div class="container">
       <a href="/" class="header__logo">
         <img src="{%static 'images/assets/logo.svg'%}" />
-        <h1>StudyBuddy</h1>
+        <h1>Room4Thought</h1>
       </a>
       <form class="header__search" method='GET' action="{%url 'home' %}">
         <label>
